animated my projects and solve overflow problem before animations

--- a/style/about-section.css
+++ b/style/about-section.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 5fr 6fr;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 #about-section img {
