--- a/style/skills-section.css
+++ b/style/skills-section.css
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
 }
 
 .skliis-info-container .skills-info {
@@ -23,7 +24,6 @@
   transform: translateX(0);
   opacity: 1;
 }
-
 
 #skills-section h1 span {
   color: var(--main-color);
@@ -41,6 +41,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow-x: hidden;
 }
 
 .skills-container .skills {
